--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // VisualInspection_with_PageObjectModel_in_KatalonStudio/build.gradle
 // $ gradle drivers
 
-version = '0.1.0-SNAPSHOT'
+version = '0.1.0'
 
 ext {
     AUTO_IMPORTED_JAR_PREFIX = 'AUTOIMPORTED_'
