--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // VisualInspection_with_PageObjectModel_in_KatalonStudio/build.gradle
 // $ gradle drivers
 
-version = '0.1.0'
+version = '0.8.4'
 
 ext {
     AUTO_IMPORTED_JAR_PREFIX = 'AUTOIMPORTED_'
@@ -18,7 +18,7 @@ configurations {
 }
 
 dependencies {
-    myconf group: 'com.kazurayam', name: 'materialstore', version: "0.7.1-SNAPSHOT"
+    myconf group: 'com.kazurayam', name: 'materialstore', version: "0.8.4"
     myconf group: 'com.kazurayam', name: 'kazurayam_FreeMarker_directives', version: "0.2.0"
     myconf group: 'com.kazurayam', name: 'ExecutionProfilesLoader', version: '1.2.1'
     myconf group: 'com.kazurayam', name: 'subprocessj', version: '0.3.3'
