--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -6,3 +6,4 @@ execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
 report.takeScreenshotOption=false
 execution.default.smartWaitMode=true
+execution.default.executionConfiguration="Chrome (headless)"
