--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // VisualInspection_with_PageObjectModel_in_KatalonStudio/build.gradle
 // $ gradle drivers
 
-version = '0.12.5'
+version = '0.13.1-SNAPSHOT'
 
 ext {
     AUTO_IMPORTED_JAR_PREFIX = 'AUTOIMPORTED_'
@@ -18,7 +18,7 @@ configurations {
 }
 
 dependencies {
-    myconf group: 'com.kazurayam', name: 'materialstore', version: "0.12.5"
+    myconf group: 'com.kazurayam', name: 'materialstore', version: "0.13.1-SNAPSHOT"
     myconf group: 'com.kazurayam', name: 'ExecutionProfilesLoader', version: '1.2.1'
     myconf group: 'com.kazurayam', name: 'subprocessj', version: '0.3.3'
     myconf group: 'ru.yandex.qatools.ashot', name: 'ashot', version: '1.5.4'
